@@ -1,3 +1,4 @@
+* Add searcher on destination_planned_date field
 * Helper to detect late reservations
 
 Version 3.2.1 - 2014-10-31
